--- a/index.html
+++ b/index.html
@@ -22,12 +22,20 @@
         [v-cloak]{
             display: none;
         }
+        input{
+            margin: 10px;
+            display: block;
+
+        }
     </style>
 </head>
 <body>
     <div id="app" v-cloak>
         {{greeting}}
         <input @keyup.enter="greet(greeting+'!!!!!')" v-model="greeting"/>
+        <hr>
+        <login-form>
+
         <hr>
         <button @click.prevent="toggleBox">Show box</button>
         &nbsp;
@@ -56,6 +64,27 @@
 
             }
         )
+
+        app.component('login-form',{
+            template:`
+                <form @submit.prevent="handleSubmit">
+                    <h1>{{title}} </h1>
+                    <input type="email"/>
+                    <input type="password"/>
+                    <button>Log in</button>
+                </form>
+            `,
+            data(){
+                return{
+                    title:'Login Form'
+                }
+            },
+            methods:{
+                handleSubmit(){
+                    console.log('submitted')
+                }
+            }
+        })
         app.mount('#app')
 
 
