--- a/vue3-fcc-course-basic-product-cart-demo-home-page-1/src/app.html
+++ b/vue3-fcc-course-basic-product-cart-demo-home-page-1/src/app.html
@@ -23,7 +23,7 @@
             <span>Past Orders</span>
           </a>
         </nav>
-        <a href="#" class="top-bar-cart-link">
+        <a @click="toggleSideBar" class="top-bar-cart-link">
           <i class="icofont-cart-alt icofont-1x"></i>
           <span>Cart (0)</span>
         </a>
@@ -109,13 +109,13 @@
                     <label>Quantity:</label>
                   </div>
                   <div class="cell">
-                    <input type="number" v-model="inventory.pineapples">
+                    <input type="number" v-model.number="inventory.pineapples">
                   </div>
                 </div>
               </form>
             </div>
             <div class="card-footer">
-              <button class="btn btn-light">Add to cart</button>
+              <button class="btn btn-light"  @click="addToCart('pineapples')">Add to cart</button>
             </div>
           </div>
 
@@ -147,13 +147,13 @@
                     <label>Quantity:</label>
                   </div>
                   <div class="cell">
-                    <input type="number" v-model="inventory.cherries">
+                    <input type="number" v-model.number="inventory.cherries">
                   </div>
                 </div>
               </form>
             </div>
             <div class="card-footer">
-              <button class="btn btn-light">Add to cart</button>
+              <button class="btn btn-light"  @click="addToCart('cherries')">Add to cart</button>
             </div>
           </div>
 
@@ -161,16 +161,20 @@
 
       </main>
 
+      <sidebar v-if="showSideBar" 
+        :toggle="toggleSideBar" 
+        :cart="cart"/>
       <footer>
       </footer>
-
     </div>
       
     <script src="https://unpkg.com/vue@next"></script>
     <script>
       let app = Vue.createApp({
+        
         data() {
           return {
+            showSideBar:false,
             inventory: {
               carrots: 0,
               pineapples: 0,
@@ -187,10 +191,68 @@
           addToCart(type) {
             this.cart[type] += this.inventory[type]
             console.log(this.cart)
-          }
+          },
+
+          toggleSideBar(){
+            this.showSideBar= !this.showSideBar
+            console.log(this.showSideBar)
+          },
         }
       })
 
+    app.component('sidebar',{
+      props:['toggle','cart'],
+      template:`
+      <aside class="cart-container">
+        <div class="cart">
+          <h1 class="cart-title spread">
+            <span>
+              Cart
+              <i class="icofont-cart-alt icofont-1x"></i>
+            </span>
+            <button @click="toggleSidebar" class="cart-close">&times;</button>
+          </h1>
+
+          <div class="cart-body">
+            <table class="cart-table">
+              <thead>
+                <tr>
+                  <th><span class="sr-only">Product Image</span></th>
+                  <th>Product</th>
+                  <th>Price</th>
+                  <th>Qty</th>
+                  <th>Total</th>
+                  <th><span class="sr-only">Actions</span></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td><i class="icofont-carrot icofont-3x"></i></td>
+                  <td>Carrot</td>
+                  <td>$4.82</td>
+                  <td class="center">{{cart.carrots}}</td>
+                  <td>{{cart.carrots*4.82}}</td>
+                  <td class="center">
+                    <button class="btn btn-light cart-remove">
+                      &times;
+                    </button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+
+            <p class="center"><em>No items in cart</em></p>
+            <div class="spread">
+              <span><strong>Total:</strong> $1.00</span>
+              <button class="btn btn-light">Checkout</button>
+            </div>
+          </div>
+        </div>
+      </aside>
+
+      `
+
+      })
       app.mount('#app')
     </script>
   </body>
