--- a/vue3-fcc-course-basic-product-cart-demo-home-page-1/src/app.html
+++ b/vue3-fcc-course-basic-product-cart-demo-home-page-1/src/app.html
@@ -175,11 +175,13 @@
         data() {
           return {
             showSideBar:false,
-            inventory: {
-              carrots: 0,
-              pineapples: 0,
-              cherries: 0
-            },
+            inventory: []
+            // {
+            //   carrots: 0,
+            //   pineapples: 0,
+            //   cherries: 0
+            // },
+            ,
             cart: {
               carrots: 0,
               pineapples: 0,
@@ -197,11 +199,20 @@
             this.showSideBar= !this.showSideBar
             console.log(this.showSideBar)
           },
-        }
+        },
+        async mounted() {
+          const res = await fetch('./food.json')
+          const data = await res.json()
+         this.inventory=data 
+        },
       })
-
     app.component('sidebar',{
       props:['toggle','cart'],
+      computed:{
+          cartTotal(){
+            return(this.cart.carrots*4.82).toFixed(2)
+          }
+      },
       template:`
       <aside class="cart-container">
         <div class="cart">
@@ -210,7 +221,7 @@
               Cart
               <i class="icofont-cart-alt icofont-1x"></i>
             </span>
-            <button @click="toggleSidebar" class="cart-close">&times;</button>
+            <button @click="toggle" class="cart-close">&times;</button>
           </h1>
 
           <div class="cart-body">
@@ -231,7 +242,31 @@
                   <td>Carrot</td>
                   <td>$4.82</td>
                   <td class="center">{{cart.carrots}}</td>
-                  <td>{{cart.carrots*4.82}}</td>
+                  <td>\${{cart.carrots*4.82}}</td>
+                  <td class="center">
+                    <button class="btn btn-light cart-remove">
+                      &times;
+                    </button>
+                  </td>
+                </tr>
+                <tr>
+                  <td><i class="icofont-pineapple icofont-3x"></i></td>
+                  <td>Pineapple</td>
+                  <td>$4.82</td>
+                  <td class="center">{{cart.pineapples}}</td>
+                  <td>\${{cart.pineapples*1.62}}</td>
+                  <td class="center">
+                    <button class="btn btn-light cart-remove">
+                      &times;
+                    </button>
+                  </td>
+                </tr>
+                <tr>
+                  <td><i class="icofont-cherry icofont-3x"></i></td>
+                  <td>Cherry</td>
+                  <td>$4.82</td>
+                  <td class="center">{{cart.cherries}}</td>
+                  <td>\${{cart.cherries*1.04}}</td>
                   <td class="center">
                     <button class="btn btn-light cart-remove">
                       &times;
@@ -243,15 +278,13 @@
 
             <p class="center"><em>No items in cart</em></p>
             <div class="spread">
-              <span><strong>Total:</strong> $1.00</span>
+              <span><strong>Total:</strong>\${{cartTotal}}</span>
               <button class="btn btn-light">Checkout</button>
             </div>
           </div>
         </div>
       </aside>
-
       `
-
       })
       app.mount('#app')
     </script>
