--- a/vue3-fcc-course-basic-product-cart-demo-home-page-1/src/app.html
+++ b/vue3-fcc-course-basic-product-cart-demo-home-page-1/src/app.html
@@ -25,7 +25,7 @@
         </nav>
         <a @click="toggleSideBar" class="top-bar-cart-link">
           <i class="icofont-cart-alt icofont-1x"></i>
-          <span>Cart (0)</span>
+          <span>Cart ({{totalQuantity}})</span>
         </a>
       </header>
 
@@ -41,19 +41,19 @@
 
         <div class="recommended">
 
-          <div class="card">
+          <div v-for="(product,i) in inventory.slice(0,3)" :key="product.id" class="card">
             <div class="card-title">
-              Carrots
+              {{product.name}}
             </div>
             <div class="card-body">
-              <i class="icofont-10x icofont-carrot"></i>
+              <i class="icofont-10x icofont-{{product.icon}}"></i>
               <form>
                 <div class="row">
                   <div class="cell">
                     <label>Type:</label>
                   </div>
                   <div class="cell">
-                    <em>Vegetable</em>
+                    <em>{{product.type}}</em>
                   </div>
                 </div>
                 <div class="row">
@@ -61,7 +61,7 @@
                     <label>Price:</label>
                   </div>
                   <div class="cell">
-                    $4.82
+                    ${{product.price.USD}}
                   </div>
                 </div>
                 <div class="row">
@@ -69,19 +69,19 @@
                     <label>Quantity:</label>
                   </div>
                   <div class="cell">
-                    <input type="number" v-model.number="inventory.carrots">
+                    <input type="number" v-model.number="product.quantity" min="0">
                   </div>
                 </div>
               </form>
             </div>
             <div class="card-footer">
-              <button @click="addToCart('carrots')" class="btn btn-light">
+              <button @click="addToCart(product.name,i)" class="btn btn-light">
                 Add to cart
               </button>
             </div>
           </div>
 
-          <div class="card">
+          <!-- <div class="card">
             <div class="card-title">
               Pineapples
             </div>
@@ -109,7 +109,7 @@
                     <label>Quantity:</label>
                   </div>
                   <div class="cell">
-                    <input type="number" v-model.number="inventory.pineapples">
+                    <input type="number" v-model.number="inventory.pineapples" min="0">
                   </div>
                 </div>
               </form>
@@ -117,9 +117,9 @@
             <div class="card-footer">
               <button class="btn btn-light"  @click="addToCart('pineapples')">Add to cart</button>
             </div>
-          </div>
+          </div> -->
 
-          <div class="card">
+          <!-- <div class="card">
             <div class="card-title">
               Cherries
             </div>
@@ -147,7 +147,7 @@
                     <label>Quantity:</label>
                   </div>
                   <div class="cell">
-                    <input type="number" v-model.number="inventory.cherries">
+                    <input type="number" v-model.number="inventory.cherries" min="0">
                   </div>
                 </div>
               </form>
@@ -155,7 +155,7 @@
             <div class="card-footer">
               <button class="btn btn-light"  @click="addToCart('cherries')">Add to cart</button>
             </div>
-          </div>
+          </div> -->
 
         </div>
 
@@ -163,7 +163,9 @@
 
       <sidebar v-if="showSideBar" 
         :toggle="toggleSideBar" 
-        :cart="cart"/>
+        :cart="cart"
+        :inventory="inventory"
+        :remove="remove"/>
       <footer>
       </footer>
     </div>
@@ -183,34 +185,66 @@
             // },
             ,
             cart: {
-              carrots: 0,
-              pineapples: 0,
-              cherries: 0
             }
           }
         },
+        computed:{
+          // cartTotal(){
+          //   return(this.cart.carrots*4.82).toFixed(2)
+          // },
+          totalQuantity(){
+            return Object.values(this.cart).reduce((acc,curr)=>{
+              return acc+curr
+            },0)
+          }
+      
+      },
         methods: {
-          addToCart(type) {
-            this.cart[type] += this.inventory[type]
+          addToCart(name,i) {
+            if (!this.cart[name])this.cart[name]=0
+            this.cart[name] += this.inventory[i].quantity
             console.log(this.cart)
+            this.inventory[i].quantity=0
           },
-
           toggleSideBar(){
             this.showSideBar= !this.showSideBar
             console.log(this.showSideBar)
           },
+          remove(name){
+              delete this.cart[name]
+          }
         },
         async mounted() {
           const res = await fetch('./food.json')
           const data = await res.json()
-         this.inventory=data 
+          this.inventory=data 
+          console.log(this.inventory)
         },
       })
     app.component('sidebar',{
-      props:['toggle','cart'],
+      props:['toggle','cart','inventory','remove'],
       computed:{
-          cartTotal(){
-            return(this.cart.carrots*4.82).toFixed(2)
+          // cartTotal(){
+          //   return(this.cart.carrots*4.82).toFixed(2)
+          // },
+      
+      },
+      methods: {
+          getPrice(name){
+              const product = this.inventory.find((p)=>{
+                  return p.name === name
+              })
+              return product.price.USD
+          },
+          calculateTotal(){
+              const name = Object.keys(this.cart)
+              console.log(name)
+              const total = Object.entries(this.cart).reduce((
+                  acc,curr)=>{
+                    return acc +(curr[1]*this.getPrice(curr[0]))
+                  },0)
+              console.log(total)
+              return total.toFixed(2)
           }
       },
       template:`
@@ -237,38 +271,14 @@
                 </tr>
               </thead>
               <tbody>
-                <tr>
+                <tr v-for="(quantity,key,i) in cart" :key="i">
                   <td><i class="icofont-carrot icofont-3x"></i></td>
-                  <td>Carrot</td>
-                  <td>$4.82</td>
-                  <td class="center">{{cart.carrots}}</td>
-                  <td>\${{cart.carrots*4.82}}</td>
+                  <td>{{key}}</td>
+                  <td>\${{getPrice(key)}}</td>
+                  <td class="center">{{quantity}}</td>
+                  <td>\${{quantity*getPrice(key)}}</td>
                   <td class="center">
-                    <button class="btn btn-light cart-remove">
-                      &times;
-                    </button>
-                  </td>
-                </tr>
-                <tr>
-                  <td><i class="icofont-pineapple icofont-3x"></i></td>
-                  <td>Pineapple</td>
-                  <td>$4.82</td>
-                  <td class="center">{{cart.pineapples}}</td>
-                  <td>\${{cart.pineapples*1.62}}</td>
-                  <td class="center">
-                    <button class="btn btn-light cart-remove">
-                      &times;
-                    </button>
-                  </td>
-                </tr>
-                <tr>
-                  <td><i class="icofont-cherry icofont-3x"></i></td>
-                  <td>Cherry</td>
-                  <td>$4.82</td>
-                  <td class="center">{{cart.cherries}}</td>
-                  <td>\${{cart.cherries*1.04}}</td>
-                  <td class="center">
-                    <button class="btn btn-light cart-remove">
+                    <button class="btn btn-light cart-remove" @click="remove(key)">
                       &times;
                     </button>
                   </td>
@@ -276,9 +286,10 @@
               </tbody>
             </table>
 
-            <p class="center"><em>No items in cart</em></p>
+            <p class="center" v-if="!Object.keys(cart).length"><em>No items in cart</em></p>
+            <hr>
             <div class="spread">
-              <span><strong>Total:</strong>\${{cartTotal}}</span>
+              <span><strong>Total:</strong>\${{calculateTotal()}}</span>
               <button class="btn btn-light">Checkout</button>
             </div>
           </div>
